test/sema/typeck/lambda/closure-undefined.out
error: unknown identifier `x`.
--> closure-undefined.dora:2:17
 | fn f() {
 |     ||: Int32 { x };
                   ~
 |     let _x: Int32 = 10i32;
 | }
1 error found.
