test/sema/typeck/lambda/closure-undefined.dora
fn f() {
    ||: Int32 { x };
    let _x: Int32 = 10i32;
}
